--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll --verbose",
     "start": "nodemon index.js",
-    "seed": "node seed.js"
+    "seed": "node database/seed.js"
   },
   "keywords": [],
   "author": "",
