Made the tests more dry. Enabled them to be run all at once.

--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll --verbose",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll --verbose --runInBand",
     "start": "nodemon index.js",
     "seed": "node database/seed.js"
   },
