added socket.io realtime messaging, changed app listen to variable so server is able to use it

--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
-    "mongoose": "^7.4.4"
+    "mongoose": "^7.4.4",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "jest": "^29.6.2",
