updated package.json start key to use node instead of nodemon

--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll --verbose --runInBand",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "seed": "node database/seed.js"
   },
   "keywords": [],
