Wrote additional tests and fixed some existing ones

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -2,3 +2,5 @@
 ATLAS_DB_URL =
 # Port for local connection
 PORT =
+# Set to exclude stack trace from production environment.
+NODE_ENV = "production"
